--- a/css/styles.css
+++ b/css/styles.css
@@ -35,3 +35,12 @@ a {
 a:hover {
   color: #f00;
 }
+@media screen and (min-width:480px){
+  column1 {
+    float:right;
+  }
+  column2{
+    padding:60px 20px 10px;
+  }
+
+}
