--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ body{
 }
 
 a {
-  color: #fff;
+  color: pink;
 }
 
 a:hover {
@@ -43,4 +43,7 @@ a:hover {
     padding:60px 20px 10px;
   }
 
+}
+.date{
+  color: blue;
 }
