--- a/css/styles.css
+++ b/css/styles.css
@@ -47,3 +47,8 @@ a:hover {
 .date{
   color: blue;
 }
+footer{
+    background-image: url("../images/images.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
