add text color to footer in index.html

--- a/css/styles.css
+++ b/css/styles.css
@@ -55,4 +55,5 @@ footer{
     background-image: url("../images/images.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
+    color:purple;
 }
